--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@
   --col-lt-blue: #a5e7fd;
   --col-pink: #fecff1;
   --col-lt-yellow: #ffd04d;
+  --col-lt-grey: #f1f0ef;
 
   /* Font Sizes  */
-  --font-size-xs: 1.6rem;
-  --font-size-sm: 1.8rem;
-  --font-size-md: clamp(1.6rem, 1.1rem + 1.5vw, 1.8rem);
-  --font-size-lg: clamp(1.6rem, 1.25rem + 1.5vw, 2rem);
-  --font-size-xl: 3rem;
+  --font-size-xs: clamp(1.2rem, 1rem + 1.5vw, 1.8rem);
+  --font-size-sm: clamp(1.4rem, 1.2rem + 1.5vw, 2rem);
+  --font-size-md: clamp(1.6rem, 1.4rem + 1.5vw, 2.4rem);
+  --font-size-lg: clamp(1.8rem, 1.6rem + 1.5vw, 3rem);
+  --font-size-xl: clamp(2rem, 1.8rem + 1.5vw, 4rem);
 }
 
 *,
@@ -20,22 +21,20 @@
   padding: 0;
   border: 0;
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 html,
 body {
   font-size: 62.5%;
   font-family: "Inter";
-}
-
-.logo img {
-  width: 100px;
-  height: auto;
+  display: flex;
+  justify-content: center;
 }
 
 h2 {
   font-size: var(--font-size-lg);
+  font-weight: 500;
   margin: 0 0 40px 0;
 }
 
@@ -50,57 +49,115 @@ button.submit {
   padding: 10px;
   border-radius: 6px;
   margin-top: 10px;
+  box-shadow: 2px 2px 2px grey;
+  transition: background-color 0.2s ease;
+  transition: color 0.3s ease;
+}
+
+button.submit:hover {
+  background-color: #a5e7fd;
+  color: black;
 }
 
 .container-main {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  width: clamp(350px, 75vw, 800px);
-  height: clamp(500px, 75vh, 1000px);
-  margin: clamp(10px, 3vw, 40px);
+  align-items: stretch;
+  width: clamp(350px, 75vw, 1000px);
+  /* height: clamp(500px, 75vh, 1000px); */
+  height: 100vh;
+  margin: 0 clamp(10px, 3vw, 40px);
   /* gap: 20px; */
+  border: 1px solid red;
 }
 
 .container-right {
-  padding: 20px;
   height: 100%;
   background-color: white;
+  flex: 1 1 55%;
+  align-content: center;
 }
 
 .container-left {
-  display: flex;
-
+  position: relative;
+  /* display: flex;
+  flex-direction: column;
+    align-items: center;
+  justify-content: center; */
+  overflow: hidden;
+  flex: 1 1 45%;
 }
 
-.box-right {
+.container-left,
+.container-right {
+  min-width: 0;
+}
+
+.box-top,
+.box-middle,
+.box-bottom {
+  padding: 20px;
+}
+
+.logo {
+  width: auto;
+}
+
+.logo img {
+  width: auto;
+  height: 100px;
+  display: block;
+}
+
+.container-right {
+  background-color: var(--col-lt-grey);
+}
+
+.box-middle {
+  background-color: white;
+  box-shadow: 0px 2px 2px grey;
+}
+
+.box-middle p {
+  font-size: var(--font-size-md);
+  font-weight: 400;
 }
 
 .img-background {
   position: relative;
-  /* height: 100%; */
-  border: 1px solid yellow;
+  width: 100%;
+  height: 100%;
 }
 
 .img-background img {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  /* width: auto; */
-  height: clamp(500px, 75vh, 1000px);
-  /* height: 100%; */
-  z-index: -1;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   opacity: 0.6;
+  display: block;
 }
 
 .box-label {
-  
-  display: inline;
-  width: 300px;
+  position: absolute;
+  inset: 0;
+  top: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 15%;
+  gap: 1rem;
+  pointer-events: none;
+  z-index: 1;
+  background-color: hsla(180, 44%, 5%, 0.3);
 }
 
 .box-label p {
-  display: inline;
+  margin: 0;
+  line-height: 1;
+  font-weight: 600;
+  font-size: var(--font-size-xl);
 }
 
 .box-input {
@@ -109,12 +166,22 @@ button.submit {
 }
 
 label {
-  font-size: var(--font-size-lg);
-  
+  font-size: var(--font-size-sm);
 }
 
 input {
-  background-color: lightgrey;
+  background-color: var(--col-lt-grey);
   line-height: var(--font-size-lg);
   border-radius: 6px;
+  border: 1px solid lightgrey;
+  transition: border 0.2s ease;
+}
+
+input:hover {
+  border: 1px solid blue;
+  /* transition-delay: .3s; */
+}
+
+input:active {
+  border: 1px solid red;
 }
