--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ button.submit:hover {
 
 .container-right {
   height: 100%;
+  overflow: hidden;
   background-color: white;
   flex: 1 1 55%;
   align-content: center;
@@ -86,6 +87,11 @@ button.submit:hover {
   justify-content: center; */
   overflow: hidden;
   flex: 1 1 45%;
+}
+
+h1 {
+  color: var(--col-dk-yellow);
+  font-size: var(--font-size-xl);
 }
 
 .container-left,
@@ -114,11 +120,17 @@ button.submit:hover {
 }
 
 .box-middle {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 10px;
   background-color: white;
-  box-shadow: 0px 2px 2px grey;
+  box-shadow: 0px 0px 5px grey;
 }
 
-.box-middle p {
+.box-middle-hdr {
+  display: block;
   font-size: var(--font-size-md);
   font-weight: 400;
 }
@@ -161,27 +173,30 @@ button.submit:hover {
 }
 
 .box-input {
-  display: inline-block;
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
   margin-bottom: 5px;
 }
 
 label {
-  font-size: var(--font-size-sm);
+  font-size: var(--font-size-xs);
+  text-transform: uppercase;
 }
 
 input {
   background-color: var(--col-lt-grey);
-  line-height: var(--font-size-lg);
+  line-height: var(--font-size-md);
   border-radius: 6px;
-  border: 1px solid lightgrey;
+  border: 1px solid grey;
   transition: border 0.2s ease;
+}
+
+input:focus {
+  border: 1px solid red;
 }
 
 input:hover {
   border: 1px solid blue;
   /* transition-delay: .3s; */
-}
-
-input:active {
-  border: 1px solid red;
 }
